crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_channels.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
List channels: each channel's id, title, interaction model, status, journey count and tags, filtered (every filter set must match), sorted (by id unless --sort-by says otherwise) and paged, with the total before paging.

Usage: specforge product channels [OPTIONS]

Options:
      --status <STATUS>
          Only channels with this status: active (also a channel without one) or deprecated
          
          [possible values: active, deprecated]

      --interaction-model <INTERACTION_MODEL>
          Only channels with this interaction model: request_response, event_driven, batch, streaming, bidirectional or manual
          
          [possible values: request_response, event_driven, batch, streaming, bidirectional, manual]

      --tags <TAGS>
          Only channels with at least one of these tags (comma-separated)

      --sort-by <SORT_BY>
          The field to sort by (default id): id, title or a field a channel declares; ties by id

      --sort-order <SORT_ORDER>
          asc (the default) or desc
          
          [possible values: asc, desc]

      --limit <LIMIT>
          Return at most this many (default 100, clamped to 1-1000)

      --offset <OFFSET>
          Skip this many first (default 0)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
