crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_coverage-matrix.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
Per persona, by id, the features its journeys reach and the ones they do not, with the coverage ratio and journey count, paged; the feature total and the mean coverage over every persona.

Usage: specforge product coverage-matrix [OPTIONS]

Options:
      --limit <LIMIT>
          Return at most this many (default 100, clamped to 1-1000)

      --offset <OFFSET>
          Skip this many first (default 0)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
