crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_critical-path.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
The longest depends_on chain of milestones not yet completed, earliest first, with target dates, zero slack and the blocked or in-progress bottlenecks; empty, with a message, when milestones depend on each other in a cycle.

Usage: specforge product critical-path [OPTIONS]

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
