crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_deliverable-completion.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
How many of the milestones a deliverable is tracked by are completed, as a count and a ratio in [0, 1]; --details adds each milestone's feature completion.

Usage: specforge product deliverable-completion [OPTIONS] <DELIVERABLE>

Arguments:
  <DELIVERABLE>
          The deliverable id

Options:
      --details
          Include each milestone's feature completion

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
