crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_deliverable-dependents.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
The deliverables that declare depends_on the deliverable, sorted by id.

Usage: specforge product deliverable-dependents [OPTIONS] <DELIVERABLE>

Arguments:
  <DELIVERABLE>
          The deliverable id

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
