crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_deliverable-personas.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
The personas the deliverable's journeys target, once each, sorted, and the journeys that connect them.

Usage: specforge product deliverable-personas [OPTIONS] <DELIVERABLE>

Arguments:
  <DELIVERABLE>
          The deliverable id

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
