crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_deliverables.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
List deliverables: each deliverable's id, title, artifact type, status, journey and module counts and tags, filtered (every filter set must match), sorted (by id unless --sort-by says otherwise) and paged, with the total before paging.

Usage: specforge product deliverables [OPTIONS]

Options:
      --status <STATUS>
          Only deliverables with this status: draft (also a deliverable without one), in_progress, shipped or deprecated
          
          [possible values: draft, in_progress, shipped, deprecated]

      --artifact-type <ARTIFACT_TYPE>
          Only deliverables of this artifact type: cli, service, library, web_app, mobile_app, api, extension, documentation or package
          
          [possible values: cli, service, library, web_app, mobile_app, api, extension, documentation, package]

      --tags <TAGS>
          Only deliverables with at least one of these tags (comma-separated)

      --sort-by <SORT_BY>
          The field to sort by (default id): id, title or a field a deliverable declares; ties by id

      --sort-order <SORT_ORDER>
          asc (the default) or desc
          
          [possible values: asc, desc]

      --limit <LIMIT>
          Return at most this many (default 100, clamped to 1-1000)

      --offset <OFFSET>
          Skip this many first (default 0)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
